Fix booking intent bug
